<resources>
    <string name="app_name">Shopping Page</string>
    <string name="Return">Return</string>
    <string name="tomoto_explanation">Fresh tomato</string>
    <string name="purchase">purchase</string>
    <string name="result">You purchased a Tomato</string>
    <string name="pota_ex">HOKU HOKU NO POTATO</string>
    <string name="result_2">You purchased a poato</string>
    <string name="goToFlowerTop">Flower Top</string>
    <string name="GoToShoping">Shopping Page</string>
    <string name="date">日付</string>
    <string name="coment">〇〇でした</string>
    <string name="memo">memo</string>
    <string name="create_text_button">diary</string>
    <string name="tomato">Tomato</string>
    <string name="tomato_producer">tomato/ Tsuyoshi Tagawa</string>
    <string name="potato_producer">Potato/ Saki Miyake</string>
    <string name="broccoli_producer">Broccoli/ Sasaki Hosani</string>
    <string name="bellpepper_producer">Bellpepper/ Kanno Kawabe</string>
    <string name="eggplant_producer">Eggplant/ Chisato Todomori</string>
    <string name="garlic_producer">Garlic/ Taro Urashima</string>
    <string name="lettuce_producer">Lettuce/ Masuke Daishu</string>
    <string name="carrot_producer">Carrot/ Sumika Murayama</string>
    <string name="producer1">Tsuyoshi Tagawa</string>
    <string name="tomato_fresh">Fresh tomatos</string>
    <string name="potato">Potato</string>
    <string name="producer2">Saki Miyake</string>
    <string name="potato_ex">hokuhoku</string>
    <string name="newbutton">new1</string>
    <string name="newボタン" />
    <string name="newbutton1">button</string>
    <string name="opencamera">camera</string>
    <string name="description">returnphotop</string>
    <string name="write">writeblog</string>
    <string name="submitbutton">submit</string>


</resources>